--- a/core/linux/files/config
+++ b/core/linux/files/config
@@ -1116,7 +1116,7 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_FD is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
+CONFIG_ZRAM=m
 # CONFIG_ZRAM_WRITEBACK is not set
 # CONFIG_BLK_DEV_UMEM is not set
 CONFIG_BLK_DEV_LOOP=y
